differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr63549.c-4.8.2-1.out.txt
pr63549.c:7:1: error: ‘e’ has an incomplete type
 int i = a[e];  
 ^
pr63549.c:7: confused by earlier errors, bailing out
